--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -114,81 +114,15 @@
     <ClCompile Include="CudaMex\MexThresholdFilter.cpp">
       <Filter>Source Files\MexFiles</Filter>
     </ClCompile>
+    <ClCompile Include="CudaMex\MexMinMax.cpp">
+      <Filter>Source Files\MexFiles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CudaCompile Include="Common\CudaProcessBuffer.cu">
       <Filter>Source Files\CudaFiles</Filter>
     </CudaCompile>
-    <CudaCompile Include="Common\CudaUtilities.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
     <CudaCompile Include="Common\ImageChunk.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\cudaMeanFilter.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMultiplyImage.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\cudaAddTwoImagesWithFactor.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaAddFactor.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaFindMedian.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaFindMinMax.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaGetROI.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaHistogramCreate.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMask.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMaxFilter.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMaximumIntensityProjection.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMeanImageReduction.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMedianFilter.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMedianImageReduction.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMinFilter.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMultAddFilter.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaMultiplyTwoImages.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaNormalizeHistogram.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaPolyTransferFuncImage.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaPow.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaSumArray.cu">
-      <Filter>Source Files\CudaFiles</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Common\CudaThresholdImage.cu">
       <Filter>Source Files\CudaFiles</Filter>
     </CudaCompile>
     <CudaCompile Include="Common\CudaUnmixing.cu">
@@ -197,10 +131,64 @@
     <CudaCompile Include="Common\CudaDeviceImages.cu">
       <Filter>Source Files\CudaFiles</Filter>
     </CudaCompile>
+    <CudaCompile Include="Common\CudaUtilities.cu">
+      <Filter>Source Files\HelperFiles</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="CudaMex\CudaMex.def">
       <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Common\CudaMedianFilter.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaGetROI.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaHistogramCreate.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaMask.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaMaxFilter.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaMeanFilter.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaImageReduction.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaMinFilter.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaMultAddFilter.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaIntensityProjection.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaMultiplyImage.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaPolyTransferFunc.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaPow.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaSum.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaThreshold.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaUnmixing.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
+    </None>
+    <None Include="Common\CudaGetMinMax.cuh">
+      <Filter>Header Files\CudaFiles</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -222,9 +210,6 @@
     <ClInclude Include="Common\ImageChunk.cuh">
       <Filter>Header Files\HelperFiles</Filter>
     </ClInclude>
-    <ClInclude Include="Common\CudaKernels.cuh">
-      <Filter>Header Files\CudaFiles</Filter>
-    </ClInclude>
     <ClInclude Include="Common\CudaDeviceImages.cuh">
       <Filter>Header Files\CudaFiles</Filter>
     </ClInclude>
@@ -240,5 +225,7 @@
     <ClInclude Include="Common\CudaUtilities.cuh">
       <Filter>Header Files\CudaFiles</Filter>
     </ClInclude>
+    <ClInclude Include="Common\CudaAddFactor.cuh" />
+    <ClInclude Include="Common\CudaAddTwoImagesWithFactor.cuh" />
   </ItemGroup>
 </Project>
