--- a/src/c/CudaMex.vcxproj.filters
+++ b/src/c/CudaMex.vcxproj.filters
@@ -128,6 +128,9 @@
     <CudaCompile Include="Common\CWrappers.cu">
       <Filter>Source Files\CudaFiles</Filter>
     </CudaCompile>
+    <CudaCompile Include="Common\ImageChunk.cu">
+      <Filter>Source Files\HelperFiles</Filter>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="CudaMex\CudaMex.def">
